<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园二手市场</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">welcome to Gxu. market!</string>
    
    <string name="login">卖家登陆</string>
    <string name="register">卖家注册</string>
    <string name="account_hint">账号</string>
    <string name="password_hint">密码</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    
    <string name="new_item">新建交易物品</string>
    <string name="title">物品名称</string>
    <string name="description">物品描述</string>
    <string name="extra">附加说明（可选）</string>
    <string name="category">类别</string>
    <string name="price">价格</string>
    <string name="submit">确认提交</string>
    <string name="cancle">放弃编辑</string>
    
    <string name="close_item">关闭物品交易</string>
    <string name="open_item">打开物品交易</string>
    <string name="deal">物品交易成功</string>
    
    <string name="edit">修改物品信息</string>
    
    <string name="has_dealt">对不起，此物品已经交易过了！</string>
    
    <string-array name="arrays">
        <item>类别1</item>
        <item>类别2</item>
        <item>类别3</item>
        <item>类别4</item>
    </string-array>
    
    <string name="close">关闭</string>
    <string name="password">修改密码</string>
    <string name="update_contact">修改联系方式</string>
    <string name="items_by_seller">查看他出售的物品</string>
    <string name="edit_user_info">修改用户信息</string>
    <string name="edit_contact_hint">请输入新的联系方式</string>
    <string name="edit_password_hint">请输入您的密码</string>
    <string name="new_password">请输入您的新密码</string>
    <string name="confirmed_password">请确认您的新密码</string>

    <string name="nick">昵称</string>
    <string name="contact">联系方式</string>
    <string name="true_name">真实姓名</string>
    
	<string name="network_down">亲，你的网络不给力啊-_-</string>    
	<string name="resolve_data_error">数据解析出错！请稍后再试！</string>
	
	<string name="logining">努力登陆中。。。</string>
	<string name="login_fail">登陆失败！%1$s</string>
	<string name="wrong_login_info">用户名密码错误！</string>
	<string name="login_ok">登陆成功！</string>
	
	<string name="publish_at">发布于\t</string>
	
	<string name="item_not_found">对不起，您所要找的物品不存在！</string>
	<string name="no_extra">该物品没有额外信息哦^_^</string>
	
	<string name="publishing">正在努力提交中。。。</string>
	<string name="publish_fail">发表失败！</string>
	<string name="publish_ok">发表成功！</string>
	<string name="register_fail">注册失败！</string>
	<string name="register_ok">注册成功！</string>
	<string name="call_seller">联系卖家！</string>
	<string name="sms_seller">联系卖家！</string>
	
	<string name="contact_not_found">对不起，没有找到该用户的联系方式！</string>
	<string name="password_wrong">操作失败，密码错误！</string>
	<string name="password_not_match">两次密码不一致！</string>
	<string name="optr_fail">操作失败，请稍后再试！</string>
	<string name="optr_ok">操作成功！</string>
	
	<string name="logout">登出</string>
	
	<string name="sync_error">同步出错！\t %1$s</string>
	<string name="sync_nice">同步成功！本次同步时间\t %1$s</string>
	<string name="syncing">同步中。。。上一次同步时间\t %1$s</string>
	<string name="sync">同步最新数据</string>
</resources>
