<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLength="18"
        android:textSize="20sp" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
	        android:id="@+id/categories"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:prompt="@string/category" />
        <EditText
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/categories"
            android:layout_alignBottom="@id/categories"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:hint="@string/price"
            android:inputType="number" />
    </RelativeLayout>
    
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text|textMultiLine"
        android:maxLength="255"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/extra"
        android:inputType="text|textImeMultiLine"
        android:maxLines="255"
        android:textSize="18sp" />
    
</LinearLayout>
